--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,23 +2,16 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Main",
-            "type": "cppdbg",
+            "name": "pjoin",
+            "type": "lldb",
             "request": "launch",
-            "program": "${workspaceFolder}/pjoin",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
+            "program": "${workspaceFolder}/build/pjoin",
+            "args": [
+                "100000",
+                "200000",
+                "50"
             ],
+            "cwd": "${workspaceFolder}",
             "preLaunchTask": "Build"
         }
     ]
